# FullCycle

./: .gitignore
EDA/: Dockerfile  docker-compose.yaml  go.mod  (+1 more)
codeflix/catalog_rust/: Cargo.toml  gerar_cobertura.ps1  tarpaulin-report.html
codeflix/catalog_rust/src/: lib.rs
codeflix/catalog_rust/src/catalog_domain/: mod.rs
codeflix/catalog_rust/src/catalog_domain/entity/: category.rs
codeflix/catalog_rust/src/catalog_domain/error/: validation_error.rs
codeflix/catalog_rust/src/catalog_domain/exceptions/: entity_validation.rs
codeflix/catalog_rust/src/catalog_domain/validation/: domain_validation.rs
codeflix/catalog_rust/src/category_domain/: mod.rs
codeflix/catalog_rust/src/category_domain/entity/: category.rs
codeflix/catalog_rust/tests/: catalog.rs  category.rs  main.rs
codeflix/catalog_rust/tests/domain/entity/category/: category_test.rs  category_test_fixture.rs
eda-desafio/balances/: .env  Cargo.toml  Dockerfile
eda-desafio/balances/.sqlx/: query-027d4452840843343b9ac87c7f7cd590cdc514b7bba1430488df4b4370904549.json  query-31bd252c94935d1f96939652c8354f9438e5cbea059c027e9ea231d35f8639cc.json  query-942630fba66e0df0f595dcb361e1228c086cdef283849d1166d9f39c9ace9c65.json
eda-desafio/balances/migrations/: 20250416140121_create_table.sql
eda-desafio/balances/src/: main.rs
eda-desafio/balances/src/internal/: mod.rs
eda-desafio/balances/src/internal/database/: account_db.rs  mod.rs
eda-desafio/balances/src/internal/entity/: account.rs
eda-desafio/balances/src/internal/event/: mod.rs  update_balance_event.rs
eda-desafio/balances/src/internal/gateway/: account.rs
eda-desafio/balances/src/internal/usecase/: mod.rs  update_balance.rs
eda-desafio/balances/src/internal/web/: account_handler.rs
(+250 files in other folders)
