[package]
name = "balances"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5.1"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
tokio = {version = "1.44.2",features = ["macros", "rt-multi-thread"]}
rdkafka = { version = "0.37.0", features = ["tokio"] }
dotenv = "0.15.0"

[dependencies.sqlx]
version = "0.8.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
